MINOR: path conversion working with MSYS2